# Athanor

./: .codex.json  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  UNSAFE.md  antigravity.json  athanor.toml  athanor_implementation_plan_ru.md  deny.toml  for agents. md  install.ps1  install.sh  start.md
apps/ath/: Cargo.toml
apps/ath/src/: analysis_cli.rs  api_cli.rs  direct_application_report_cli.rs  direct_application_report_composed_cli.rs  direct_check_cli.rs  direct_config_cli.rs  direct_context_cli.rs  direct_generation_cli.rs  direct_graph_cli.rs  direct_operation.rs  direct_plugin_cli.rs  direct_read_cli.rs  direct_read_composed_cli.rs  direct_rustok_cli.rs  direct_rustok_composed_cli.rs  direct_rustok_help.rs  direct_search_cli.rs  direct_validate_changed_cli.rs  docs_cli.rs  entry.rs  index_cli.rs  main.rs  mcp_cli.rs  projection_cli.rs  projects_cli.rs  repair_cli.rs  repair_composed_cli.rs  root_command.rs
apps/ath/tests/: direct_application_report_cli.rs  direct_check_cli.rs  direct_config_cli.rs  direct_graph_cli.rs  direct_plugin_cli.rs  direct_read_cli.rs  direct_validate_changed_cli.rs  documentation_architecture_cli.rs  executable_shared_report_cli.rs  index_checksum_cli.rs  index_checksum_recovery_cli.rs  repair_cli.rs
apps/athd/: Cargo.toml  build.rs
apps/athd/src/: main.rs
crates/athanor-app/: Cargo.toml
crates/athanor-app/src/: adapter_contract.rs  api.rs  api_registry.rs  application_report_composition.rs  artifact_checksum.rs  automation_contract.rs  bench.rs  boundary_contract.rs  cancellation.rs  capabilities.rs  change_map.rs  change_map_facade.rs  check.rs  composition.rs  config.rs  context.rs  context_composition.rs  context_operation.rs  context_report.rs  coverage.rs  daemon.rs  daemon_client.rs  daemon_command_dispatch.rs  daemon_connection.rs  daemon_contract.rs  daemon_derived_read_dispatch.rs  daemon_endpoint.rs  daemon_job_cancellation.rs  daemon_job_registry.rs  daemon_job_scheduler.rs  daemon_job_state.rs  daemon_jobs_support.rs  daemon_lifecycle.rs  daemon_operation.rs  daemon_protocol.rs  daemon_queries.rs  daemon_read_dispatch.rs  daemon_read_dispatch_tests.rs  daemon_recovery.rs  daemon_runtime.rs  (+95 more)
crates/athanor-app/tests/: adapter_contract_inventory.rs  api_composition_inventory.rs  api_contracts.rs  application_output_contracts.rs  check_composition_inventory.rs  composition_isolation.rs  config_contracts.rs  context_composition_inventory.rs  context_pack_behavior.rs  context_report_contract.rs  daemon_composition_inventory.rs  daemon_transport_contracts.rs  deferred_canonical_buffer.rs  docs_completeness_lifecycle_inventory.rs  documentation_architecture_inspection_inventory.rs  documentation_architecture_profile_inventory.rs  documentation_architecture_publication_inventory.rs  documentation_generation_contract_inventory.rs  documentation_generation_slice0b_inventory.rs  documentation_status_inventory.rs  generation_docs_contracts.rs  graph_composition_inventory.rs  json_contract_inventory.rs  legacy_factory_migration.rs  mcp_runtime_bootstrap_inventory.rs  prepared_publication.rs  process_persistence_contract_inventory.rs  project_registry_report_contract.rs  public_report_transport_inventory.rs  publication_recovery_matrix.rs  publication_semantics_inventory.rs  read_service_composition_inventory.rs  release_readiness_inventory.rs  remaining_application_contract_inventory.rs  remaining_application_contracts.rs  repair_contract_inventory.rs  repair_contracts.rs  runtime_modularity_inventory.rs  rustok_architecture_context_contract.rs  rustok_fba_contracts.rs  (+8 more)
crates/athanor-core/: Cargo.toml
crates/athanor-core/src/: atomic_publication.rs  cancellation.rs  fact_query.rs  latest_pointer.rs  lib.rs  ports.rs  prepared_publication.rs  read_operation.rs
crates/athanor-domain/: Cargo.toml
crates/athanor-domain/src/: generation.rs  lib.rs  model.rs
crates/athanor-extractor-js-ts/: Cargo.toml  README.md
crates/athanor-extractor-js-ts/src/: lib.rs
crates/athanor-extractor-markdown/: Cargo.toml  README.md
crates/athanor-extractor-markdown/src/: frontmatter.rs  lib.rs
crates/athanor-extractor-rust/: Cargo.toml  README.md
crates/athanor-extractor-rust/src/: lib.rs
crates/athanor-linker-markdown/: Cargo.toml  README.md
crates/athanor-linker-markdown/src/: lib.rs
crates/athanor-projector-support/: Cargo.toml  README.md
crates/athanor-projector-support/src/: lib.rs
crates/athanor-projector-support/tests/: publication_failure_semantics.rs
crates/athanor-runtime-defaults/: Cargo.toml
crates/athanor-runtime-defaults/src/: lib.rs  projector_operation.rs
crates/athanor-runtime-defaults/tests/: rustok_resolver.rs
crates/athanor-search-tantivy/: Cargo.toml  README.md
crates/athanor-search-tantivy/src/: lib.rs
crates/athanor-store-conformance/: Cargo.toml
crates/athanor-store-conformance/src/: atomic_publication.rs  lib.rs  query_lifecycle.rs
crates/athanor-store-jsonl/: Cargo.toml  README.md
crates/athanor-store-jsonl/src/: atomic_publication.rs  canonical.rs  commit_marker.rs  indexes.rs  latest.rs  lib.rs  lifecycle.rs  pointer_publication.rs  snapshot_io.rs  store.rs  strict_latest.rs
crates/athanor-store-jsonl/tests/: atomic_publication.rs  conformance.rs  fact_query.rs  module_boundaries.rs  refactored_store.rs
crates/athanor-store-memory/: Cargo.toml
crates/athanor-store-memory/src/: facade.rs  lib.rs
crates/athanor-store-memory/tests/: atomic_publication.rs  conformance.rs  fact_query.rs  prepared_publication.rs
crates/athanor-store-surrealdb/: Cargo.toml  README.md
crates/athanor-store-surrealdb/src/: allocation_recovery.rs  atomic_publication.rs  atomic_transaction.rs  backend_store.rs  facade.rs  latest_pointer.rs  lib.rs  transactional.rs
crates/athanor-store-surrealdb/tests/: allocation_recovery.rs  atomic_publication.rs  conformance.rs  fact_query.rs  persistent_lock.rs  prepared_publication.rs  remote.rs
crates/athanor-transport-mcp/: Cargo.toml  README.md
crates/athanor-transport-mcp/src/: lib.rs  (+5 more)
(+451 files in other folders)
