[workspace]
members = [
    "apps/ath",
    "crates/athanor-app",
    "crates/athanor-checker-markdown",
    "crates/athanor-checker-api",
    "crates/athanor-core",
    "crates/athanor-domain",
    "crates/athanor-extractor-basic",
    "crates/athanor-extractor-markdown",
    "crates/athanor-extractor-openapi",
    "crates/athanor-extractor-rust",
    "crates/athanor-linker-markdown",
    "crates/athanor-linker-api",
    "crates/athanor-projector-wiki",
    "crates/athanor-projector-support",
    "crates/athanor-projector-html",
    "crates/athanor-source-fs",
    "crates/athanor-store-jsonl",
    "crates/athanor-store-memory",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/RusTokRs/Athanor"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
pulldown-cmark = { version = "0.13", default-features = false }
oas3 = { version = "0.22", features = ["yaml-spec"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
