[workspace]
members = [
    "apps/ath",
    "apps/athd",
    "crates/athanor-adapter-rustok-page-builder",
    "crates/athanor-adapter-rustok-fba",
    "crates/athanor-adapter-rustok-ffa",
    "crates/athanor-app",
    "crates/athanor-checker-markdown",
    "crates/athanor-checker-api",
    "crates/athanor-core",
    "crates/athanor-domain",
    "crates/athanor-extractor-basic",
    "crates/athanor-extractor-markdown",
    "crates/athanor-extractor-js-ts",
    "crates/athanor-extractor-openapi",
    "crates/athanor-extractor-graphql",
    "crates/athanor-extractor-operations",
    "crates/athanor-extractor-rust",
    "crates/athanor-linker-markdown",
    "crates/athanor-linker-api",
    "crates/athanor-linker-js-ts",
    "crates/athanor-linker-rust",
    "crates/athanor-projector-wiki",
    "crates/athanor-projector-support",
    "crates/athanor-projector-html",
    "crates/athanor-runtime-defaults",
    "crates/athanor-source-fs",
    "crates/athanor-store-jsonl",
    "crates/athanor-store-memory",
    "crates/athanor-store-conformance",
    "crates/athanor-store-surrealdb",
    "crates/athanor-search-tantivy",
    "crates/athanor-transport-mcp",
]
resolver = "3"

[workspace.package]
authors = ["RusTokRs"]
description = "Local-first, evidence-backed code knowledge engine for AI agents and developers"
documentation = "https://github.com/RusTokRs/Athanor/tree/main/docs"
edition = "2024"
homepage = "https://github.com/RusTokRs/Athanor"
license = "MIT"
publish = false
repository = "https://github.com/RusTokRs/Athanor"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.10"
jsonschema = { version = "0.47.0", default-features = false }
notify-debouncer-mini = "0.7.0"
serde_yaml_ng = "0.10"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
pulldown-cmark = { version = "0.13", default-features = false }
oas3 = { version = "0.22", features = ["yaml-spec"] }
oxc_allocator = "0.138.0"
oxc_ast = "0.138.0"
oxc_ast_visit = "0.138.0"
oxc_parser = "0.138.0"
oxc_span = "0.138.0"
oxc_syntax = "0.138.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
tree-sitter = "0.26.9"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
fs2 = "0.4"
getrandom = "0.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
