[package]
name = "ath"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
athanor-app = { path = "../../crates/athanor-app" }
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
