[package]
name = "ath"
version = "0.1.0"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
autobins = false

[[bin]]
name = "ath"
path = "src/entry.rs"

[dependencies]
anyhow.workspace = true
athanor-app = { path = "../../crates/athanor-app" }
athanor-core = { path = "../../crates/athanor-core" }
athanor-domain = { path = "../../crates/athanor-domain" }
athanor-runtime-defaults = { path = "../../crates/athanor-runtime-defaults" }
athanor-transport-mcp = { path = "../../crates/athanor-transport-mcp" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
store-surreal = ["athanor-runtime-defaults/store-surreal"]
js-ts-precision = [
    "athanor-app/js-ts-precision",
    "athanor-runtime-defaults/js-ts-precision",
]
