[package]
name = "athd"
version = "0.1.0"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
athanor-app = { path = "../../crates/athanor-app" }
athanor-domain = { path = "../../crates/athanor-domain" }
clap.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "signal"] }
tracing-subscriber.workspace = true
