[package]
name = "athd"
version = "0.2.1"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
athanor-app = { path = "../../crates/athanor-app" }
athanor-domain = { path = "../../crates/athanor-domain" }
athanor-runtime-defaults = { path = "../../crates/athanor-runtime-defaults" }
clap.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
store-surreal = ["athanor-runtime-defaults/store-surreal"]
js-ts-precision = [
    "athanor-app/js-ts-precision",
    "athanor-runtime-defaults/js-ts-precision",
]
