[package]
name = "athanor-app"
version = "0.1.0"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
athanor-checker-markdown = { path = "../athanor-checker-markdown" }
athanor-checker-api = { path = "../athanor-checker-api" }
athanor-core = { path = "../athanor-core" }
athanor-domain = { path = "../athanor-domain" }
athanor-extractor-basic = { path = "../athanor-extractor-basic" }
athanor-extractor-markdown = { path = "../athanor-extractor-markdown" }
athanor-extractor-openapi = { path = "../athanor-extractor-openapi" }
athanor-extractor-rust = { path = "../athanor-extractor-rust" }
athanor-linker-markdown = { path = "../athanor-linker-markdown" }
athanor-linker-api = { path = "../athanor-linker-api" }
athanor-linker-rust = { path = "../athanor-linker-rust" }
athanor-projector-wiki = { path = "../athanor-projector-wiki" }
athanor-projector-html = { path = "../athanor-projector-html" }
athanor-projector-support = { path = "../athanor-projector-support" }
athanor-source-fs = { path = "../athanor-source-fs" }
athanor-store-jsonl = { path = "../athanor-store-jsonl" }
athanor-store-memory = { path = "../athanor-store-memory" }
athanor-store-surrealdb = { path = "../athanor-store-surrealdb", optional = true }
athanor-search-tantivy = { path = "../athanor-search-tantivy" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[features]
default = ["store-surreal"]
store-surreal = ["dep:athanor-store-surrealdb"]

[dev-dependencies]
tokio.workspace = true
