[package]
name = "athanor-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
athanor-domain = { path = "../athanor-domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
