[package]
name = "athanor-extractor-rust"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
athanor-core = { path = "../athanor-core" }
athanor-domain = { path = "../athanor-domain" }
athanor-extractor-basic = { path = "../athanor-extractor-basic" }
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
syn.workspace = true

[dev-dependencies]
tokio.workspace = true
