[package]
name = "athanor-linker-markdown"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
athanor-core = { path = "../athanor-core" }
athanor-domain = { path = "../athanor-domain" }
athanor-extractor-basic = { path = "../athanor-extractor-basic" }
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
