[package]
name = "athanor-projector-support"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
athanor-core = { path = "../athanor-core" }
athanor-domain = { path = "../athanor-domain" }
serde.workspace = true
