[package]
name = "athanor-store-conformance"
version = "0.1.0"
authors.workspace = true
description = "Shared conformance checks for Athanor knowledge stores"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
athanor-core = { path = "../athanor-core" }
athanor-domain = { path = "../athanor-domain" }
serde_json.workspace = true
