[package]
name = "athanor-store-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
athanor-core = { path = "../athanor-core" }
athanor-domain = { path = "../athanor-domain" }

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
