[package]
name = "athanor-store-memory"
version = "0.1.0"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/facade.rs"

[dependencies]
async-trait.workspace = true
athanor-core = { path = "../athanor-core" }
athanor-domain = { path = "../athanor-domain" }

[dev-dependencies]
athanor-store-conformance = { path = "../athanor-store-conformance" }
serde_json.workspace = true
tokio.workspace = true
