[package]
name = "athanor-store-surrealdb"
version = "0.1.0"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
remote = ["surrealdb/protocol-ws"]

[dependencies]
async-trait.workspace = true
athanor-core = { path = "../athanor-core" }
athanor-domain = { path = "../athanor-domain" }
fs2.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
surrealdb = { version = "2.0", default-features = false, features = ["kv-mem", "kv-surrealkv"] }
tokio.workspace = true

[dev-dependencies]
athanor-store-conformance = { path = "../athanor-store-conformance" }
