[package]
name = "athanor-transport-mcp"
version = "0.1.0"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/runtime.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
athanor-app = { path = "../athanor-app" }
athanor-core = { path = "../athanor-core" }
athanor-domain = { path = "../athanor-domain" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
